2002-06-11  Stefan Petersen  <spe@stacken.kth.se>

	* src/draw.[hc],src/draw-amacro.[hc], src/Makefile.am: Split out 
	  aperture macro stuff from draw.c to a separate file, draw_amacro.c.
	* src/draw_amacro.c: Fixed bug when drawing primitive 4 causing
	  rotation to be wrong. Thanks to Jonas (you know who you are) for 
	  the excellent files.
	* src/draw_amacro.c: Changed interpretation of "closed shape" in
	  primitive 4. If first point is the same as the last point it's
	  a closed shape, ie filled according to my interpretation. Don't
	  know if it's a correct interpretation.

2002-06-10  Anders Eriksson  <anders@umunet.org>

	* src/gerbv.c: Centered outline zoom uses shift instead of control,
	  use shift before clicking with button three to initiate centered
	  outline zoom (rm:ed switching between centered and plain outline).
	  Changed distance output format to add more digits.

2002-06-09  Anders Eriksson  <anders@umunet.org>

	* src/gerbv.c: Fix actual zoomed area for centered outline zooming.

2002-06-09  Anders Eriksson  <anders@umunet.org>

	* src/gerbv.c: Set cross hair cursor as soon as shift key is
	  pressed (in normal mode, i.e. not zoom outline). Added centered
	  zoom outline mode (closes Feature Request 553452).

2002-06-09  Anders Eriksson  <anders@umunet.org>

	* src/gerbv.c: Added measure distance color. Added actual zoom
	  box for zoom outline mode (this shows the area that will
	  be included when zooming, displayed as dashed lines). Use
	  cross-hair cursor when measuring distance.

2002-06-08  Anders Eriksson  <anders@umunet.org>

	* src/gerbv.c (motion_notify_event, expose_event): Don't
	  redraw entire image when drawing zoom outline and measured
	  distance. This makes the outline follow much more smoothly.
	  The side effect in measure mode is that several measures
	  may be visible simultaneously. I am not sure if this is
	  a bug or a feature. :)

2002-06-08  Stefan Petersen  <spe@stacken.kth.se>
